--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   pin_code_fields: ^8.0.1
   shared_preferences: ^2.2.2
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
